Rubber-stamped by Ariya Hidayat.

Rolling out r53889, because it might caused flakeyness on the Windows Test bots
https://bugs.webkit.org/show_bug.cgi?id=34399

WebKitTools: 

* DumpRenderTree/win/EventSender.cpp:
(mouseDownCallback):
(mouseUpCallback):
(keyDownCallback):

LayoutTests: 

* platform/win/Skipped:



git-svn-id: svn://svn.chromium.org/blink/trunk@54295 bbb929c8-8fbe-4397-9dbb-9b2b20218538